--- a/app/assets/stylesheets/application/base/helpers.css.scss
+++ b/app/assets/stylesheets/application/base/helpers.css.scss
@@ -32,5 +32,5 @@ ul.menu {
   border: 1px solid #898989;
   @include border-radius(7px);
   cursor: pointer;
-  padding: 5px 15px;
+  padding: 2px 15px 5px;
 }
