--- a/app/assets/stylesheets/application/base/theme.css.scss
+++ b/app/assets/stylesheets/application/base/theme.css.scss
@@ -1,4 +1,6 @@
 html {
+  position: relative;
+  min-height: 100%;
   font-family: Tahoma, Geneva, sans-serif;
   font-size: 14px;
   color: $black;
