--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,1 +1,11 @@
-футер
+%footer
+  .row
+    .container
+      наша продукция
+  .row.dark-gray-bg
+    .container
+      поиск
+      = render 'shared/search_bar'
+  .row
+    .container
+      кто мы
