--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -29,3 +29,6 @@
         .help-block
           %p.light-blue Безопасность
           %p.light-blue Возврат денег
+
+.container
+  = render 'shared/search_bar'
