--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -11,4 +11,7 @@
 @import "base/helpers";
 @import "base/theme";
 
+@import "global/search_bar";
+@import "global/banner";
 @import "global/header";
+@import "global/footer";
