--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,9 @@
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}
     %meta{content: "width=1080", name: "viewport"}
 
-    %title= @meta[:title]
+    %title= @meta[:seo_title]
     %meta{name: :keywords, content: @meta[:keywords]}
-    %meta{name: :description, content: @meta[:description]}
+    %meta{name: :description, content: @meta[:seo_description]}
 
     = favicon_link_tag 'favicon.png', type: 'image/png'
     = csrf_meta_tags
