--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -3,16 +3,17 @@ $btnBorderRadius: 7px;
 $btnBorderColor:  #898989;
 
 // COLORS
-$black:     #252525;
-$blue:      #004b8d;
-$darkGray:  #a1a1a1;
-$darkPink:  #b0276f;
-$gray:      #ccc;
-$lightBlue: #105b63;
-$lightGray: #e4e4e4;
-$lightPink: #ffccc2;
-$pink:      #c93482;
-$white:     #fff;
+$black:      #252525;
+$blue:       #004b8d;
+$darkGray:   #a1a1a1;
+$darkPink:   #b0276f;
+$gray:       #ccc;
+$lightBlack: #363636;
+$lightBlue:  #105b63;
+$lightGray:  #e4e4e4;
+$lightPink:  #ffccc2;
+$pink:       #c93482;
+$white:      #fff;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
