--- a/app/assets/stylesheets/application/global/search_bar.css.scss
+++ b/app/assets/stylesheets/application/global/search_bar.css.scss
@@ -8,21 +8,22 @@
   @include box-sizing(border-box);
   background-color: #e1e1e1;
 
-  input[type="text"] {
-    position: relative;
-    width: 587px;
-    border: 1px solid $btnBorderColor;
-    border-right: none;
-    @include box-sizing(border-box);
-    @include border-bottom-left-radius($btnBorderRadius);
-    @include border-top-left-radius($btnBorderRadius);
-    padding: 13px;
-    padding-left: $spriteWidth + 9*2; // plus sprite left
+  // see original in helpers form.inline-one-input
+  form.inline-one-input {
+    input[type="text"] {
+      width: 587px;
+      padding: 13px;
+      padding-left: $spriteWidth + 9*2; // plus sprite left
+    }
+
+    .btn {
+      font-size: 24px;
+      padding: 4px 50px 10px;
+      margin-top: -1px;
+      top: 1px;
+    }
   }
 
-  .wrapper {
-    position: relative;
-  }
 
   .icon {
     position: absolute;
@@ -33,15 +34,5 @@
     top: 50%;
     margin-top: -$spriteWidth/2;
     @include icons-sprite('magnifier');
-  }
-
-  .btn {
-    @include border-bottom-left-radius(0px);
-    @include border-top-left-radius(0px);
-    font-size: 24px;
-    padding: 4px 50px 10px;
-    margin-top: -1px;
-    position: relative;
-    top: 1px;
   }
 }
