--- a/app/assets/stylesheets/application/global/footer.css.scss
+++ b/app/assets/stylesheets/application/global/footer.css.scss
@@ -4,4 +4,95 @@ footer {
   width: 100%;
   clear: both;
   background-color: $gray;
+
+  .search-bar {
+    float: left;
+    margin-top: 25px;
+    margin-left: 18px;
+  }
+
+  .row {
+    @include box-shadow(inset 0 3px 10px -3px rgba(50, 50, 50, 0.4));
+  }
+
+  .our-products {
+    li {
+      max-width: 160px;
+      margin-right: 40px;
+      margin-left: 0;
+      padding-top: 10px;
+      padding-bottom: 30px;
+      font-size: 16px;
+
+      &:nth-last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .who-are-we {
+    padding-bottom: 50px;
+
+    ul.menu {
+      li a { font-size: 22px; }
+
+      .help-block {
+        font-size: 16px;
+
+        p { margin: 4px 0; }
+      }
+    }
+
+    .left-menu {
+      width: 465px;
+
+      li {
+        min-height: 60px;
+        width: 50%;
+        margin: 0;
+      }
+    }
+
+    .right-menu {
+      padding-bottom: 25px;
+
+      li {
+        margin: 0 30px 0 0;
+        &:nth-last-child { margin: 0; }
+      }
+    }
+
+    .right-block {
+      padding-left: 40px;
+    }
+  }
+
+  .subscribe {
+    p {
+      margin: 0;
+      font-size: 20px;
+    }
+
+    form.inline-one-input {
+      input[type="text"] {
+        width: 400px;
+        padding: 10px 10px 11px;
+      }
+
+      .btn {
+        font-size: 20px;
+        padding: 4px 20px 10px;
+      }
+    }
+  }
+}
+
+.gray-block {
+  @extend .light-gray-bg;
+  padding: 10px 23px;
+  margin-top: 20px;
+
+  h2 {
+    margin-top: 0;
+  }
 }
