--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,9 +17,9 @@
     = favicon_link_tag 'favicon.png', type: 'image/png'
     = csrf_meta_tags
 
-    /[if lt IE 9]>
+    <!--[if lt IE 9]><!-->
     = javascript_include_tag 'html5shiv-printshiv'
-    /[endif]
+    <!--<![endif]-->
     = stylesheet_link_tag 'application'
 
   %body
