--- a/app/views/shared/_search_bar.html.haml
+++ b/app/views/shared/_search_bar.html.haml
@@ -1,5 +1,5 @@
 .search-bar
-  = form_tag '/' do
+  = form_tag '/', class: 'inline-one-input' do
     %span.wrapper<
       .icon
       = text_field_tag :q, '', placeholder: 'Что вы ищете?'
