--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,10 @@
 .container
-  %h1 Hello world
+  %h1 Каталог
+
+  .categories-list
+    %ul
+      - ["MC-головки звукоснимателя", "ММ-звукосниматели", "МС-трансформаторы", "Фонокорректоры", "Предварительные усилители", "Усилители для наушников", "Согласующие трансформаторы", "Кабели", "ЦАПы", "Розетка 6-местная (сетевая колодка 220В)", "Аксессуары", "Пневмоплатформа"].each do |title|
+        %li
+          = link_to '#' do
+            = image_tag 'category.jpg', class: 'grayscale grayscale-fade'
+            %span= title
