main page news block

--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -14,6 +14,7 @@ $lightGray:  #e4e4e4;
 $lightPink:  #ffccc2;
 $pink:       #c93482;
 $white:      #fff;
+$dullGray:   #636363;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
