--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -4,11 +4,12 @@
       %h2
         Наша продукция
         %span.icons-arrow-black-down
-      %ul.menu
-        %li= link_to 'Sale', [:sale, :product_categories], class: 'pink'
-        - if @roots_product_categories.present?
-          - @roots_product_categories.each do |category|
-            %li= link_to category.title, category
+      - if @product_categories.present?
+        .categories-list.footer
+          %ul.menu
+            %li= link_to 'Sale', [:sale, :product_categories], class: 'pink'
+            = build_product_category_ancestry_tree(@product_categories)
+
   .row.dark-gray-bg
     .container
       %h2.pull-left
