--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,24 +1,22 @@
 .container
   %h1 Каталог
 
-  - if @roots_product_categories.present?
+  - if @product_categories.present?
     .categories-list
       %ul
-        - @roots_product_categories.each do |product_category|
-          -# ["MC-головки звукоснимателя", "ММ-звукосниматели", "МС-трансформаторы", "Фонокорректоры", "Предварительные усилители", "Усилители для наушников", "Согласующие трансформаторы", "Кабели", "ЦАПы", "Розетка 6-местная (сетевая колодка 220В)", "Аксессуары", "Пневмоплатформа"].each do |title|
-          %li
-            = link_to product_category do
-              = image_tag 'category.jpg', class: 'grayscale grayscale-fade'
-              %span= product_category.title
+        = build_product_category_ancestry_tree(@product_categories)
 
   - if @news.present? || @useful_information.present?
-    .b-news
+    %hr
+    .b-news.main-page
       - if @news.present?
-        %h3 Новости
-        %ul.news
-          = render partial: 'posts/includes/main_news_list', collection: @news, as: :post
+        .b-news-one.margin-right
+          %h3.blue Новости
+          %ul
+            = render partial: 'posts/includes/main_news_list', collection: @news, as: :post
 
       - if @useful_information.present?
-        %h3 Полезная информация
-        %ul.useful_information
-          = render partial: 'posts/includes/main_news_list', collection: @useful_information, as: :post
+        .b-news-one
+          %h3.blue Полезная информация
+          %ul
+            = render partial: 'posts/includes/main_news_list', collection: @useful_information, as: :post, locals: { with_author: true }
