--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -15,6 +15,7 @@ $lightPink:  #ffccc2;
 $pink:       #c93482;
 $white:      #fff;
 $dullGray:   #636363;
+$deathlyIndigo: #004071;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
