--- a/app/assets/stylesheets/application/global/footer.css.scss
+++ b/app/assets/stylesheets/application/global/footer.css.scss
@@ -18,10 +18,10 @@ footer {
   .our-products {
     li {
       max-width: 160px;
+      min-height: 98px;
       margin-right: 40px;
       margin-left: 0;
       padding-top: 10px;
-      padding-bottom: 30px;
       font-size: 16px;
 
       &:nth-last-child {
