social network auth backend only

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,7 +4,7 @@
     .image= image_tag 'application/logo.png'
     = @settings[:shop_name]
     %br
-    %span.blue Звук как надо
+    -#%span.blue Звук как надо
   #catalog.item
     .btn
       Продукция
