--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -16,6 +16,8 @@ $pink:       #c93482;
 $white:      #fff;
 $dullGray:   #636363;
 $deathlyIndigo: #004071;
+$gainsborough:  #e1e1e1;
+$moderateReddishOrange: #d9593d;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
