some css for auth form

--- a/app/assets/stylesheets/application/base/theme.css.scss
+++ b/app/assets/stylesheets/application/base/theme.css.scss
@@ -51,6 +51,13 @@ h2 {
   }
 }
 
+h3 {
+  font-size: 30px;
+  color: $black;
+  font-weight: normal;
+  margin: 10px 0;
+}
+
 //CONTAINER
 .container {
   margin: 0 auto;
