continue show product page

--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -18,6 +18,8 @@ $dullGray:   #636363;
 $deathlyIndigo: #004071;
 $gainsborough:  #e1e1e1;
 $moderateReddishOrange: #d9593d;
+$persianGreen: #00a388;
+$telegram: #959595;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
