--- a/app/views/products/includes/_stores.html.haml
+++ b/app/views/products/includes/_stores.html.haml
@@ -1,5 +1,6 @@
-%ul.stores_list
+%ul.e-stores_list
   - stores.each do |store|
-    %li
-      %p= store[:store].title
-      %p= store[:store_count].count
+    - stock = class_with_content_for_count_in_stock(store[:store].happens, store[:store_count].count)
+    %li{ class: "#{ stock[:class] }" }
+      %p #{ link_or_title_for_store(store[:store]) }
+      %p #{ stock[:content] }
