--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,14 +1,16 @@
 .b-product
   %h3= resource.title
 
-  = render 'products/includes/image_gallery_show_product_page', resource: resource if resource.photos.any?
+  .b-product-top-information
+    = render 'products/includes/image_gallery_show_product_page', resource: resource if resource.photos.any?
 
-  .b-product-short-info
-    = price_with_discount(resource)
-    .ratable.read_only{ data: { score: resource.average_score } }
-    = link_to [resource.published_reviews_count, t('views.product.reviews_count', count: resource.published_reviews_count)].join(' '), '#', class: 'reviews-count'
+    .b-product-short-info
+      = price_with_discount(resource)
+      .b-product-ratable-with-reviews
+        .ratable.read_only{ data: { score: resource.average_score } }
+        = link_to I18n.t('views.product.reviews_count', count: resource.published_reviews_count), '#', class: 'reviews-count'
 
-    = render 'products/includes/stores', stores: @stores if @stores.present?
+      = render 'products/includes/stores', stores: @stores if @stores.present?
 
   .b-product-description
     %h4 О товаре
@@ -16,7 +18,7 @@
 
   = render 'products/includes/characteristics', characteristics: @characteristics if @characteristics.present?
 
-  %h3= "Отзывы (#{ resource.published_reviews_count })"
+  %h4= "Отзывы (#{ resource.published_reviews_count })"
 
   - if current_user.present? && resource.can_vote?(current_user.id)
     %h4 Ваш отзыв
