--- a/app/assets/stylesheets/application/base/theme.css.scss
+++ b/app/assets/stylesheets/application/base/theme.css.scss
@@ -63,4 +63,11 @@ h3 {
   margin: 0 auto;
   width: 1168px;
   @include clearfix();
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      list-style: none;
+    }
+  }
 }
