--- a/app/views/products/includes/_characteristics.html.haml
+++ b/app/views/products/includes/_characteristics.html.haml
@@ -1,11 +1,7 @@
-.b-products-characteristics
-  %h4 Технические детали
-  %ol
-    - characteristics.each do |char|
-      %li= char[:category].title
-      - if char[:characteristics].any?
-        %ul
-          - char[:characteristics].each do |cat_char|
-            %li
-              %strong= cat_char[:characteristic].title
-              %p= cat_char[:characteristic_value].value
+%table
+  - characteristics.each do |char|
+    - if char[:characteristics].any?
+      %tr
+        - char[:characteristics].each do |cat_char|
+          %td= cat_char[:characteristic].title
+          %td= cat_char[:characteristic_value].value
