--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -16,32 +16,18 @@
     %h4 О товаре
     %p= raw resource.description
 
-  = render 'products/includes/characteristics', characteristics: @characteristics if @characteristics.present?
-
-  %h4= "Отзывы (#{ resource.published_reviews_count })"
-
-  - if current_user.present? && resource.can_vote?(current_user.id)
-    %h4 Ваш отзыв
-    .rating
-      %p Рейтинг
-      %p.ratable
-
-    = form_for(Review.new, url: [:add_review, resource], method: :post) do |f|
-      = hidden_field_tag 'review[rating_score]'
-      = f.hidden_field :user_id, { value: current_user.id }
-      %p
-        = f.label :pluses, t('pluses', scope: [:activerecord, :attributes, :review])
-        = f.text_field :pluses
-
-      %p
-        = f.label :cons, t('cons', scope: [:activerecord, :attributes, :review])
-        = f.text_field :cons
-
-      %p
-        = f.label :body, t('body', scope: [:activerecord, :attributes, :review])
-        = f.text_field :body
-
-      %p= f.submit 'Оставить отзыв'
+  .b-product-tabs
+    .nav-tabs
+      %ul
+        %li.active= link_to 'Технические детали', '#characteristics', data: { block: 'b-product-characteristics' }
+        %li
+          = link_to t('views.product.review', count: resource.published_reviews_count),
+            '#reviews', data: { block: 'b-product-review' }
+    .tab-content
+      .b-product-characteristics.tab.active
+        = render 'products/includes/characteristics', characteristics: @characteristics if @characteristics.present?
+      .b-product-review.tab
+        = render 'products/includes/reviews' if current_user.present? && resource.can_vote?(current_user.id)
 
   - if @related_products.present?
     %h4 Товары в комплект
