css for user widget

--- a/app/assets/stylesheets/application/main.css.scss
+++ b/app/assets/stylesheets/application/main.css.scss
@@ -12,6 +12,7 @@
 @import "base/theme";
 
 @import "global/search_bar";
+@import "global/user_widget";
 @import "global/banner";
 @import "global/header";
 @import "global/footer";
