--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
     = stylesheet_link_tag 'application'
 
   %body
+    = render 'shared/user_widget'
     = render 'shared/header'
 
     .banner-wrapper
