product card page

--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -3,23 +3,24 @@ $btnBorderRadius: 7px;
 $btnBorderColor:  #898989;
 
 // COLORS
-$black:      #252525;
-$blue:       #004b8d;
-$darkGray:   #a1a1a1;
-$darkPink:   #b0276f;
-$gray:       #ccc;
-$lightBlack: #363636;
-$lightBlue:  #105b63;
-$lightGray:  #e4e4e4;
-$lightPink:  #ffccc2;
-$pink:       #c93482;
-$white:      #fff;
-$dullGray:   #636363;
-$deathlyIndigo: #004071;
-$gainsborough:  #e1e1e1;
+$black:                 #252525;
+$blue:                  #004b8d;
+$darkGray:              #a1a1a1;
+$darkPink:              #b0276f;
+$gray:                  #ccc;
+$lightBlack:            #363636;
+$lightBlue:             #105b63;
+$lightGray:             #e4e4e4;
+$lightPink:             #ffccc2;
+$pink:                  #c93482;
+$white:                 #fff;
+$dullGray:              #636363;
+$deathlyIndigo:         #004071;
+$gainsborough:          #e1e1e1;
 $moderateReddishOrange: #d9593d;
-$persianGreen: #00a388;
-$telegram: #959595;
+$persianGreen:          #00a388;
+$telegram:              #959595;
+$smokyWhite:            #efefef;
 
 .blue { color: $blue; }
 .dark-pink { color: $darkPink; }
