new review form

--- a/app/assets/stylesheets/application/base/variables.css.scss
+++ b/app/assets/stylesheets/application/base/variables.css.scss
@@ -1,6 +1,7 @@
 // VARS
 $btnBorderRadius: 7px;
 $btnBorderColor:  #898989;
+$bigInputsWidth:  466px;
 
 // COLORS
 $black:                 #252525;
