--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -33,8 +33,8 @@
 
         = render partial: 'products/includes/review', collection: @last_reviews, as: :review
 
-        - # TODO: models/review.rb:4 related reviews limit
-        = link_to t('views.product.more_reviews'), '#' if resource.published_reviews_count > 5
+        = link_to t('views.product.more_reviews'), [:more_review, resource],
+          class: 'more-review', data: { more: 0, count: Settings.product.reviews_count } if resource.published_reviews_count > Settings.product.reviews_count
 
   - if @related_products.present?
     %h4 Товары в комплект
