--- a/app/assets/stylesheets/application/blocks/product/retable_with_reviews.css.scss
+++ b/app/assets/stylesheets/application/blocks/product/retable_with_reviews.css.scss
@@ -10,4 +10,16 @@
     color: $deathlyIndigo;
     font-size: 20px;
   }
+  &.smal {
+    img {
+      width: 15px;
+      height: 15px;
+    }
+    .reviews-count {
+      font-size: 14px;
+    }
+    .ratable {
+      min-width: 100px;
+    }
+  }
 }
